--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,28 @@
     box-sizing: border-box;
 }
 
+.fade-in {
+    opacity: 0; /* Comienza con opacidad 0 para la transición */
+    animation: fadeInAnimation 2s ease-in forwards; /* Aplica la animación */
+  }
+  
+/* Mantén el CSS anterior */
+.fade-in {
+    opacity: 0; /* Comienza con opacidad 0 para la transición */
+    animation: fadeInAnimation 2s ease-in forwards; /* Aplica la animación */
+  }
+  
+  @keyframes fadeInAnimation {
+    from {
+      opacity: 0; /* Empieza con opacidad 0 */
+    }
+    to {
+      opacity: 1; /* Termina con opacidad 1 */
+    }
+  }
+  
+  
+
 
 :root {
     --padding-container: 100px 0;
