--- a/css/estilos.css
+++ b/css/estilos.css
@@ -267,7 +267,7 @@ body {
     text-align: center;
     border-radius: 10px;
     width: 330px;
-    padding: 40px;
+    padding: 40px 0px;
     --color-plan: #696871;
     --color-price: #1D293F;
     --bg-cta: #fff;
@@ -277,7 +277,7 @@ body {
 
 .price__element--best {
     width: 370px;
-    padding: 60px 40px;
+    padding: 60px 0px;
     background-color: #236523;
     --color-plan: rgb(255 255 255 / 75%);
     --color-price: #fff;
@@ -296,6 +296,7 @@ body {
 .price__price {
     font-size: 2.5rem;
     color: var(--color-price);
+    width: 100%;
 }
 
 .price__items {
@@ -309,7 +310,10 @@ body {
 }
 
 .price__cta {
+   
     display: block;
+    width: 90%;
+    margin: auto;
     padding: 20px 0;
     border-radius: 10px;
     text-decoration: none;
